Fix overlapping scan controls

--- a/src/styles/views/scan.scss
+++ b/src/styles/views/scan.scss
@@ -11,7 +11,7 @@
 	flex-direction: column;
 	float: left;
 	margin: g(.25);
-	position: relative;
+	position: absolute;
 	z-index: 9;
 }
 
@@ -83,9 +83,9 @@
 	}
 }
 
+// NOTE: OpenSeadragon adds `position: relative`
 .tify-scan_image {
 	height: 100%;
-	position: absolute;
 	white-space: nowrap;
 	width: 100%;
 
@@ -106,10 +106,11 @@
 	text-shadow: none;
 	top: 50%;
 	width: g(1.25);
-	z-index: 9;
+	z-index: 1;
 
 	// Move buttons to bottom depending on screen height so buttons in the
 	// top-left corner are not overlapped
+	// TODO: Set this depending on container size
 	@media (max-height: 479px) {
 		top: 75%;
 	}
